opam-version : "2.0"
name         : "tjr_btree"
version      : "0.0.1"

# ----------------------------------------------------------------------

authors      : "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer   : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage     : "https://github.com/tomjridge/tjr_btree"
bug-reports  : "https://github.com/tomjridge/tjr_btree/issues"


# ----------------------------------------------------------------------

depends: [
  "bin_prot" 
  "ppx_bin_prot"
  "tjr_fs_shared" 
  "isa_btree" 
]

# ----------------------------------------------------------------------


build: [make "build"]
