opam-version: "2.0"
name: "tjr_btree_examples"
version: "0.0.1"

# ----------------------------------------------------------------------

authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_btree"
bug-reports: "https://github.com/tomjridge/tjr_btree/issues"


# ----------------------------------------------------------------------

depends: [
  "lru"       # for caching store ops
  "core"      # for profiling
  "tjr_btree"  
]

# ----------------------------------------------------------------------

# taken from JS base
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
