(executables
;  (flags -noassert)
 (names 
  int_int_map_example_functionality
  int_int_map_main
  string_string_map_example_functionality
  string_string_map_main)
 (public_names
  int_int_map_example_functionality
  int_int_map_main
  string_string_map_example_functionality
  string_string_map_main)
 (libraries tjr_btree oseq))

