(env
  (_ (flags (:standard -w -8-39-26 -open Tjr_lib -open Tjr_monad -open Tjr_profile -open Tjr_fs_shared -open Isa_btree -open Isa_btree_intf -open Tjr_btree -open Tjr_btree.Btree_intf -open Tjr_btree_examples  -open Tjr_btree_examples.Intf))))

(executables
  (names test)
  (libraries tjr_btree tjr_btree_examples))


